<resources>
    <string name="app_name">ארון בגדים</string>
    <string name="name">שם :</string>
    <string name="size">מידה :</string>
    <string name="color">צבע :</string>
    <string name="item_title"> שם המותג/כינוי:</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">בית</string>
    <string name="list_shirt">רשימת חולצות</string>
    <string name="list_pants">רשימת מכנסיים</string>
    <string name="list_shoes">רשימת נעליים</string>
    <string name="menu_share">שתף</string>
    <string name="menu_send">הוספה</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">הוספה</string>
    <string name="add_item">הוספת פריט</string>
    <string name="select">בחר</string>
    <string name="item_type">סוג הפריט</string>
    <string name="clean">נקה הכל</string>
    <string name="select_image">בחירת תמונה</string>


</resources>
