<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view"
      app:showAsAction="never"
>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_shirt"
                android:icon="@drawable/ic_perm_media_black_24dp"
                android:title="@string/list_shirt"/>
        <item
                android:id="@+id/nav_pants"
                android:icon="@drawable/ic_perm_media_black_24dp"
                android:title="@string/list_pants"/>
        <item
                android:id="@+id/nav_shoes"
                android:icon="@drawable/ic_perm_media_black_24dp"
                android:title="@string/list_shoes"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
