<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#BDBEB6"
>

    <TextView
            android:id="@+id/nameShirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"

    />

    <TextView
            android:id="@+id/nameShirt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/nameShirt"
    />






    <TextView
            android:id="@+id/sizeShirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/size"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameShirt"

           />

    <TextView
            android:id="@+id/sizeShirt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
           android:hint="size"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintRight_toLeftOf="@+id/sizeShirt"
            app:layout_constraintTop_toBottomOf="@+id/nameShirt"

    />

    <TextView
            android:id="@+id/colorShirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
           android:text="@string/color"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeShirt"

    />

    <TextView
            android:id="@+id/colorShirt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="color"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintRight_toLeftOf="@+id/sizeShirt"
            app:layout_constraintTop_toBottomOf="@+id/sizeShirt"

    />

    <ImageView
               android:id="@+id/picShirt"
               android:layout_width="200dp"
               android:layout_height="match_parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_margin="16dp"

    />

</androidx.constraintlayout.widget.ConstraintLayout>